Task5/non-admin-api-allow.yaml
---
# Политика для трафика от front-end к back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-between-front-and-back
spec:
  podSelector:
    matchLabels:
      role: front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: back-end-api

---
# Политика для трафика от back-end-api к front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-back-to-front
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: front-end

---
# Политика для трафика от admin-front-end к admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-between-admin-front-and-back
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-back-end-api

---
# Политика для трафика от admin-back-end-api к admin-front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-admin-back-to-front
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-front-end
